--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 env:
   global:
-    - NAMESPACE='grayhemp'
+    - IMAGE_PATH='grayhemp'
     # REGISTRY_PASSWORD is taken from the job settings
     - TAG='master'
 script:
